# bayesian_inference

./: README.md  pyproject.toml
notebooks/: svgd.ipynb
